# SIGSAgent

./: .env.example  .gitignore  README.md  goap_worldstate_actions_bilingual.html  guoyi_rooms_v2.json  start.bat  校园人设关系网示意_bilingual.html
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  settings.py
backend/app/agents/: __init__.py  agent.py
backend/app/agents/behavior/: __init__.py  action_specs.py  executor.py
backend/app/agents/decision/: __init__.py  goap_dsl.py  goap_planner.py  slot_filler.py
backend/app/agents/memory/: __init__.py  compressor.py  long_term.py  memory_graph.py  retriever.py  (+2 more)
backend/app/api/: __init__.py  rest.py  ws.py
backend/app/config/: __init__.py  loader.py  registry.py  schemas.py
backend/app/events/: __init__.py  bus.py
backend/app/llm/: __init__.py  adapter.py  client.py  retry.py
backend/app/persistence/: __init__.py  db.py  exporter.py  importer.py
backend/app/sim/: __init__.py  clock.py  loop.py  recorder.py
backend/app/world/: __init__.py  items.py  scene_graph.py  snapshots.py  world_state.py
backend/tests/: test_agent_navigation.py  test_api_smoke.py  test_dialog_channel.py  test_goap_comparator_goals.py  test_goap_dsl.py  test_goap_planner.py  test_goap_planner_actions.py  test_insert_events.py  test_llm_adapter_mock.py  test_memory_compress.py  test_memory_retriever.py  test_memory_store.py  test_perception.py  test_scene_graph.py  test_scene_graph_pathfinding.py  test_schedule_timeline.py  test_slot_filler.py  test_template_target_state.py  test_world_apply_effect.py
(+270 files in other folders)
